# base-boilerplate

./: .gitignore  README.md  args.json.example  cookies.json  input.json  input.json.example  profiles.json  pyproject.toml  usernames.json
base_boilerplate/: main.py
instagram_scraper/query_to_username/: main.py
instagram_scraper/scrape_profile/: main.py
tiktok_scraper/: main.py
